Реализованное домашнее задание № 8 после проверки