@@ -2,42 +2,27 @@ package ru.otus.hw.mongock.changelog;
 
 import com.github.cloudyrock.mongock.ChangeLog;
 import com.github.cloudyrock.mongock.ChangeSet;
-import com.mongodb.client.MongoDatabase;
-import org.bson.Document;
-import org.springframework.boot.configurationprocessor.json.JSONArray;
-import org.springframework.boot.configurationprocessor.json.JSONException;
+import ru.otus.hw.models.Comment;
+import ru.otus.hw.repositories.BookRepository;
+import ru.otus.hw.repositories.CommentRepository;
 
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @ChangeLog(order = "002")
 public class DatabaseChangelogV2 {
 
     @ChangeSet(order = "001", id = "addComments", author = "aidproger")
-    public void addComments(MongoDatabase db) throws JSONException {
-        var comments = db.getCollection("comments");
-        var books = db.getCollection("books");
-
-        var jsonArray = "[{ \"text\": \"comment_1\" }, { \"text\": \"comment_2\" }, { \"text\": \"comment_3\" }," +
-                "{ \"text\": \"comment_4\" }, { \"text\": \"comment_5\" }, { \"text\": \"comment_6\" }," +
-                "{ \"text\": \"comment_7\" }, { \"text\": \"comment_8\" }, { \"text\": \"comment_9\" }]";
-        var array = new JSONArray(jsonArray);
-        int indexBegin = 0;
-        int indexEnd = 3;
-        for (Document book : books.find()) {
-            var docs = IntStream.range(indexBegin, indexEnd)
-                    .mapToObj(i -> {
-                        try {
-                            return Document.parse(array.getJSONObject(i).put("book_id", book.get("_id")).toString());
-                        } catch (JSONException jsone) {
-                            throw new RuntimeException(jsone.toString());
-                        }
+    public void addComments(BookRepository bookRepository, CommentRepository commentRepository) {
+        bookRepository.findAll().forEach(book -> {
+            var comments = IntStream.range(1, 5).boxed()
+                    .map(i -> {
+                        return new Comment(null,
+                                "comment_" + i + book.getId().substring(book.getId().length() - 2),
+                                book);
                     })
-                    .collect(Collectors.toList());
-            comments.insertMany(docs);
-            indexBegin += 3;
-            indexEnd += 3;
-        }
+                    .toList();
+            commentRepository.saveAll(comments);
+        });
     }
 
 }
